# Sondas-Alienigenas

./: README.md  hello.py  pastel
GLFW test/: CMakeLists.txt
GLFW test/GL/include/glad/: glad.h
GLFW test/GL/src/: glad.c
GLFW test/include/: helpers.h  shader.h  simple_texture.h
GLFW test/include/glad/: glad.h
GLFW test/shaders/: color_fragmentShader.glsl  color_vertexShader.glsl  random_vertexShader.glsl  texture_fragmentShader.glsl
GLFW test/src/: glad.c  helpers.cpp  main.cpp
tic tac toe/: board.py  game.py
